add relationType to base code and DataCite XML